2016-07-14  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	* config/arm/arm.h (TARGET_HAVE_LDACQ): Enable for ARMv8-M Mainline.
	(TARGET_HAVE_LDACQD): New macro.
	* config/arm/sync.md (atomic_loaddi): Use TARGET_HAVE_LDACQD rather
	than TARGET_HAVE_LDACQ.
	(arm_load_acquire_exclusivedi): Likewise.
	(arm_store_release_exclusivedi): Likewise.

2016-07-14  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	PR rtl-optimization/71878
	* lra-constraints.c (match_reload): Pass information about other
	output operands.  Create new unique register value if matching input
	operand shares same register value as output operand being considered.
	(curr_insn_transform): Record output operands already processed.

2016-07-14  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	PR target/65951
	PR tree-optimization/70923
	* tree-vect-patterns.c: Include mult-synthesis.h.
	(target_supports_mult_synth_alg): New function.
	(synth_lshift_by_additions): Likewise.
	(apply_binop_and_append_stmt): Likewise.
	(vect_synth_mult_by_constant): Likewise.
	(target_has_vecop_for_code): Likewise.
	(vect_recog_mult_pattern): Use above functions to synthesize vector
	multiplication by integer constants.

2016-07-14  Alan Modra  <amodra@gmail.com>

	* gcc/config/rs6000/altivec.md (altivec_mov<mode>): Disparage
	gpr alternatives.  Correct '*' placement on Y,r alternative.
	Add '*' on operand 1 of r,r alternative.

2016-07-14  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* expmed.c (mult_variant, choose_mult_variant): Move declaration to...
	* expmed.h: ... Here.

2016-07-14  Jan Hubicka  <hubicka@ucw.cz>

	* gimple.h (stmt_can_terminate_bb_p): New function.
	* tree-cfg.c (need_fake_edge_p): Rename to ...
	(stmt_can_terminate_bb_p): ... this; return true if stmt can
	throw external; handle const and pure calls.
	* tree-ssa-loop-niter.c (loop_only_exit_p): Use it.

2016-07-14  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/71866
	* tree-ssa-pre.c (get_constant_for_value_id): Remove.